# proximoaero_forcemachine

./: CMakeLists.txt  Opis_Stanowiska.docx  config.h.in  config.txt  flash_target.sh  run_build.sh  run_build_linux.sh  run_build_target.sh  run_tests.sh  start_forcemachine.sh
connectors/: BackendConnector.cpp  CMakeLists.txt
connectors/include/: BackendConnector.hpp
controller/: CMakeLists.txt  DataSaver.cpp  ForceController.cpp  GPIOController.cpp  GPIOInputs.cpp  GPIOOutputs.cpp  MeasureCalculator.cpp  MeasureController.cpp  StepMotor.cpp  USBDeviceHandler.cpp  VideoController.cpp
controller/include/: DataSaver.hpp  ForceController.hpp  GPIOController.hpp  GPIOInputs.hpp  GPIOOutputs.hpp  MeasureCalculator.hpp  MeasureController.hpp  StepMotor.hpp  USBDeviceHandler.hpp  VideoController.hpp
controller/measure/include/: ITransport.hpp  MeasureBroker.hpp  TransportBuilder.hpp  TransportDelegate.hpp  measure.hpp
controller/measure/src/: MeasureBroker.cpp  TransportBuilder.cpp  UartBroker.cpp  UartBroker.hpp  measure.cpp
helpers/: CMakeLists.txt  ForceTypes.cpp
helpers/include/: ForceTypes.hpp
main/: CMakeLists.txt  CalibrationPopup.qml  ChartLine.qml  ConfigPopup.qml  ContentPreview.qml  DebugMenu.qml  DoorPopup.qml  ExportPopup.qml  ForceMachine.cpp  Key.qml  KeyDel.qml  MainView.qml  MeasurePopup.qml  NumericKeyboard.qml  main.qml
main/ChartJS/: CMakeLists.txt  Chart.js  ChartView.qml
